# trainingpeaks-mcp-server

./: .env.example  .gitignore  README.md  claude_config_example.json  pyproject.toml  requirements.txt  test_server.py
.claude/: settings.local.json
src/trainingpeaks_mcp_server/: __init__.py  auth.py  client.py  config.py  server.py
